--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 :root {
-  --bg-colour: #748db1;
+  --bg-colour: #8ac2a6;
   --banner-bg-colour: #d4dbe4;
   --heading-text: #050a11;
   --text-colour: #111213;
-  --border-colour: #0a65e4;
+  --border-colour: #0ae47e;
   font-size: 18px;
 }
 
